src/objects/TaskCard__c.object
<CustomObject>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Estimate__c</fullName>
        <label>Estimate</label>
        <summarizedField>SubTask__c.Estimate__c</summarizedField>
        <summaryForeignKey>SubTask__c.TaskCard__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sprint_Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sprint Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Sprint__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <filterItems>
                <field>Sprint__c.Status__c</field>
                <operation>notEqual</operation>
                <value>Closed</value>
            </filterItems>
            <filterItems>
                <field>Sprint__c.Status__c</field>
                <operation>notEqual</operation>
                <value>Complete</value>
            </filterItems>
            <infoMessage>Lol</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <label>Task Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <summarizedField>SubTask__c.TotalTrack__c</summarizedField>
        <summaryForeignKey>SubTask__c.TaskCard__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Feature</fullName>
                </value>
                <value>
                    <fullName>Bug</fullName>
                </value>
                <value>
                    <fullName>Spire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TaskCard</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Task_Name__c</columns>
        <columns>Project__c</columns>
        <columns>Assignee__c</columns>
        <columns>Sprint_Project__c</columns>
        <columns>Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Estimate__c</columns>
        <columns>Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TN-{00000}</displayFormat>
        <label>Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <recordTypes>
        <fullName>BackLog</fullName>
        <active>true</active>
        <label>BackLog</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sprint</fullName>
        <active>true</active>
        <label>Sprint</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>